--- a/platforms/android/app/src/main/res/layout/activity_splash.xml
+++ b/platforms/android/app/src/main/res/layout/activity_splash.xml
@@ -3,16 +3,25 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/container"
-             android:background="#0099cc"
+             android:background="#ffffff"
              tools:context="com.alibaba.weex.com.alibaba.app.SplashActivity">
 
     <TextView android:id="@+id/fullscreen_content"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:keepScreenOn="true"
-              android:textColor="#33b5e5"
+              android:textColor="#D9AD65"
               android:textStyle="bold"
               android:textSize="50sp"
               android:gravity="center"
               android:text="@string/dummy_content"/>
+
+    <!-- <ImageView android:id="@+id/fullscreen_content"
+               android:src="@drawable/logo"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:keepScreenOn="true"
+               android:scaleType="centerCrop"
+               android:layout_gravity="center"
+               /> -->
 </FrameLayout>
